# instrumation

./: .gitignore  .visa_cache.json  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  prompt-gemini-cleanup.txt  prompt-opencode.txt  pyproject.toml  release_notes.md  requirements.txt  setup.py  sitemap.xml  test_report.csv  test_results.csv  test_station.py  usage_guide.md
.github/: FUNDING.yml
api/: index.html
async/: index.html
docs/: api.md  cli.md  contributing.md  hardware.md  headstart.md  index.md  installation.md  simulation.md
examples/: basic_usage.py  broadcast_demo.py  characterization_plot.py  dashboard.py  lab_data.json  my_test_bench.py  parallel_measure.py  pna_demo.py  post_lab_analysis.py  robust_error_handling.py  sg_sweep.py  sim_demo.py  tdk_demo.py  vfp_telemetry_stream.py  vna_complex_trace.py
golden_master/: index.html
quickstart/: index.html
scripts/: test_examples.py  update_version.py  verify_expanded_hal.py  verify_sg_upgrade.py
search/: search_index.json
site/: 404.html  objects.inv
tests/: test_adversarial.py  test_async.py  test_broadcaster.py  test_cli.py  test_context_manager.py  test_counter.py  test_electronic_load.py  test_exceptions.py  test_factory.py  test_golden_master.py  test_keithley.py  test_keysight.py  test_measurement_results.py  test_plugins.py  test_pna.py  test_prologix.py  test_rigol.py  test_rs.py  test_siglent.py  test_signal_generator.py  test_simulated_scpi.py  test_simulation.py  test_station.py  test_tdk.py  test_tektronix.py  test_tektronix_afg.py  uut_emulator.py
(+119 files in other folders)
